--- a/prj.conf
+++ b/prj.conf
@@ -1,3 +1,35 @@
+### Kernel
 CONFIG_PRINTK=y
 CONFIG_LOG=y
+
+### Device Management
+CONFIG_MCUMGR=y
+CONFIG_MCUMGR_SMP_UDP=y
+CONFIG_MCUMGR_CMD_OS_MGMT=y
+CONFIG_MCUMGR_CMD_IMG_MGMT=y
+# workqueue needs to be large to accomodate image updates
+CONFIG_SYSTEM_WORKQUEUE_STACK_SIZE=4096
+
+### Shell
 CONFIG_SHELL=y
+CONFIG_DEVICE_SHELL=y
+
+### Networking
+CONFIG_NETWORKING=y
+CONFIG_NET_UDP=y
+CONFIG_NET_SOCKETS=y
+CONFIG_NET_SOCKETS_POSIX_NAMES=y
+CONFIG_NET_CONNECTION_MANAGER=y
+CONFIG_NET_CONFIG_SETTINGS=y
+
+CONFIG_NET_IPV4=y
+CONFIG_NET_CONFIG_MY_IPV4_ADDR="192.168.1.150"
+# SMP udp needs ipv6 or it will hardfault
+
+CONFIG_NET_IPV6=y
+CONFIG_NET_CONFIG_MY_IPV6_ADDR="2001:db8::1"
+
+CONFIG_MCUMGR_SMP_UDP_IPV4=y
+CONFIG_MCUMGR_SMP_UDP_IPV6=y
+
+CONFIG_MQTT_LIB=y
