--- a/prj.conf
+++ b/prj.conf
@@ -13,6 +13,7 @@ CONFIG_SYSTEM_WORKQUEUE_STACK_SIZE=4096
 ### Shell
 CONFIG_SHELL=y
 CONFIG_DEVICE_SHELL=y
+CONFIG_SENSOR_SHELL=y
 
 ### Networking
 CONFIG_NETWORKING=y
@@ -33,3 +34,9 @@ CONFIG_MCUMGR_SMP_UDP_IPV4=y
 CONFIG_MCUMGR_SMP_UDP_IPV6=y
 
 CONFIG_MQTT_LIB=y
+
+### Drivers
+
+CONFIG_SENSOR=y
+CONFIG_ADC=y
+CONFIG_TEMP_KINETIS=y
