--- a/prj.conf
+++ b/prj.conf
@@ -18,6 +18,8 @@ CONFIG_SENSOR_SHELL=y
 ### Networking
 CONFIG_NETWORKING=y
 CONFIG_NET_UDP=y
+CONFIG_NET_TCP=y
+CONFIG_NET_TCP_ISN_RFC6528=n
 CONFIG_NET_SOCKETS=y
 CONFIG_NET_SOCKETS_POSIX_NAMES=y
 CONFIG_NET_CONNECTION_MANAGER=y
